# gdext-hs

./: .gitignore  README.md  flake.nix  gdext.cabal  stack.yaml
examples/echo-hello/: Justfile  Makefile
examples/echo-hello/godot/: echo-hello.gdextension  echo-hello.gdextension.uid  icon.svg.import  project.godot
examples/echo-hello/godot/scenes/: main.tscn
examples/echo-hello/haskell/: echo-hello.cabal  stack.yaml
examples/echo-hello/haskell/app/: Main.hs
examples/echo-hello/haskell/cbits/: flib.c
examples/echo-hello/haskell/ffi/cbits/: flib.c
examples/echo-hello/haskell/ffi/flib/: FLib.hs
examples/echo-hello/haskell/src/: Game.hs  Plugin.hs
src/: Godot.hs
