cabal-version: 3.0
name:          gdext
version:       0.1.0.0
license:       MIT
license-file:  LICENSE
author:        haruki7049
maintainer:    tontonkirikiri@gmail.com
build-type:    Simple

common warnings
  ghc-options: -Wall

library
  import:           warnings
  hs-source-dirs:   src
  build-depends:    base
  default-language: Haskell2010

test-suite tests
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Paths_gdext
  hs-source-dirs:   test
  build-depends:
    , base
    , gdext
    , hspec
    , hspec-discover
    , silently

  default-language: Haskell2010
