cabal-version: 3.0
name:          echo-hello
version:       0.1.0.0
license:       MIT
author:        haruki7049
maintainer:    tontonkirikiri@gmail.com
build-type:    Simple

common warnings
  ghc-options: -Wall

foreign-library echo-hello-plugin
  import:           warnings
  type:             native-shared
  other-modules:    FLib
  hs-source-dirs:   ffi/flib
  build-depends:    base
  c-sources:        ffi/cbits/flib.c
  include-dirs:     gdextension
  default-language: Haskell2010
  cc-options:       -fno-plt
  ghc-options:      -threaded
